updated cone ggb

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <script>
     var params = {
       width: 400,
-      height: 700,
+      height: 600,
       filename: "cone.ggb",
       enableRightClick: false,
-      enableShiftDragZoom: false,
+      enableShiftDragZoom: true,
       useBrowserForJS: true,
       showToolBar: false,
       language: "en",
