--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       height: 600,
       filename: "cone.ggb",
       enableRightClick: false,
-      enableShiftDragZoom: true,
+      enableShiftDragZoom: false,
       useBrowserForJS: true,
       showToolBar: false,
       language: "en",
