--- a/cone2tri.html
+++ b/cone2tri.html
@@ -7,11 +7,11 @@
   <script src="cone2tri.js"></script>
   <script>
     var params = {
-      width: 590,
-      height: 650,
+      width: 400,
+      height: 400,
       filename: "cone2tri.ggb",
       enableRightClick: false,
-      enableShiftDragZoom: false,
+      enableShiftDragZoom: true,
       useBrowserForJS: true,
       showToolBar: false,
       language: "en",
