--- a/cone3parabola.html
+++ b/cone3parabola.html
@@ -11,7 +11,7 @@
       height: 400,
       filename: "cone3parabola.ggb",
       enableRightClick: false,
-      enableShiftDragZoom: false,
+      enableShiftDragZoom: true,
       useBrowserForJS: true,
       showToolBar: false,
       language: "en",
