--- a/cone3hyperbola.html
+++ b/cone3hyperbola.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://www.geogebra.org/apps/deployggb.js"></script>
-  <script src="cone3parabola.js"></script>
+  <script src="cone3hyperbola.js"></script>
   <script>
     var params = {
       width: 400,
       height: 400,
-      filename: "cone3parabola.ggb",
+      filename: "cone3hyperbola.ggb",
       enableRightClick: false,
       enableShiftDragZoom: true,
       useBrowserForJS: true,
