--- a/cone3hyperbola.html
+++ b/cone3hyperbola.html
@@ -23,7 +23,7 @@
       applet.inject("ggb-element");
     });
   </script>
-  <title>GGB Sandbox</title>
+  <title>Cone Cross Sections</title>
 </head>
 <body>
   <div id="ggb-element"></div>
